--- a/.github/workflows/Profile3D.yml
+++ b/.github/workflows/Profile3D.yml
@@ -11,7 +11,7 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v3
-      - uses: hdygxsj/github-profile-3d-contrib@0.7.1
+      - uses: hdygxsj/hdygxsj
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
